using scroll and resize funtion

--- a/Lesson3/index.html
+++ b/Lesson3/index.html
@@ -10,14 +10,16 @@
     <title>Lesson3</title>
 </head>
 <body>
-<div class="Intro__Text">
-    <h2>Hi, I am Aman Pandey</h2>
-    <h4>Learning about Jquery</h4>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit atque odio tempore incidunt, 
-    architecto autem aspernatur corporis assumenda. Eveniet optio sit illum voluptate enim eaque.</p>
-    <button class="btn">Click Here</button>
-</div>
-
-    
+<section class="s1">
+    <div class="Intro__Text">
+        <h2>Hi, I am Aman Pandey</h2>
+        <h4>Learning about Jquery</h4>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit atque odio tempore incidunt, 
+        architecto autem aspernatur corporis assumenda. Eveniet optio sit illum voluptate enim eaque.</p>
+        <button class="btn">Click Here</button>
+    </div>
+</section>
+<section class="s2"></section>
+<section class="s3"></section> 
 </body>
 </html>
