using bdlclick() and some other function

--- a/Lesson3/index.html
+++ b/Lesson3/index.html
@@ -18,8 +18,13 @@
         architecto autem aspernatur corporis assumenda. Eveniet optio sit illum voluptate enim eaque.</p>
         <button class="btn">Click Here</button>
     </div>
+    <button class="btn__color" id="ch__color">Change color</button>
 </section>
-<section class="s2"></section>
-<section class="s3"></section> 
+<section class="s2">
+    <button class="btn__color" id="ch__color">Change color</button>
+</section>
+<section class="s3">
+    <button class="btn__color" id="ch__color">Change color</button>
+</section> 
 </body>
 </html>
