using after and keydown

--- a/Lesson3/index.html
+++ b/Lesson3/index.html
@@ -22,6 +22,9 @@
 </section>
 <section class="s2">
     <button class="btn__color" id="ch__color">Change color</button>
+    <div class="input__section">
+        <h1>Please type somthing:- </h1>
+    </div>
 </section>
 <section class="s3">
     <button class="btn__color" id="ch__color">Change color</button>
